# vispack

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/blend/: CMakeLists.txt  blend.C  blend.h  morph  morph.C
apps/imagetest/: CMakeLists.txt  corners.cxx  edgetest.cxx  imagedifference.cxx  imagetest.cxx  imagetest_out1.fits  imagetest_out2.fits  imagetest_out3.fits  imagetest_out4.fits  kerry.tif  morphology.cxx  noise_tmp.cxx  overlaycolor.cxx  params.txt  paramtest.cxx  read_text.cxx  removeyellow.cxx  setpoint.cxx  tmp.txt  tmp2.txt  totalvariation.cxx  wavelet.cxx
apps/mat/: CMakeLists.txt  input1  input2  input3  input4  input5  mattest.cxx  model.C
apps/myapps/: CMakeLists.txt
apps/myapps/mosaic/: CMakeLists.txt  README  params.txt  testtransform.cxx  transform.cxx  transform.h
apps/myapps/rbfmodel/: CMakeLists.txt  dipole.cxx  dipole.h  modeltest.cxx
apps/myapps/tomofit/: CMakeLists.txt  projection.cxx  projection.h  projection.txx  testtomo.cxx  tomofit.cxx
apps/myapps/volreg/: CMakeLists.txt  colormap.cxx  convert_slices.cxx  convertslice.cxx  convertslices.cxx  cropvol.cxx  resample.cxx  transform.cxx  transform.h  transvol.cxx
apps/projects/: CMakeLists.txt
apps/projects/project1/: CMakeLists.txt  index.html  project1.cxx
apps/projects/project2/: CMakeLists.txt  index.html  project2.cxx
apps/projects/project3/: CMakeLists.txt  index.html  project3.cxx  testparams.cxx  transform.cxx  transform.h
apps/projects/project3/parameterfiles_executable/: my_panorama.txt  my_planar_11.txt  params_vispack_new.txt  params_vispack_new_4cp.txt  params_vispack_new_6cp.txt  params_vispack_new_7cp.txt  params_vispack_new_7cp_err.txt  params_vispack_new_err.txt
apps/projects/project4/: CMakeLists.txt  fourier.cxx  index.html  mosaic.cxx  mosaic.h  project4.cxx
apps/projects/project5/: CMakeLists.txt  anisodiff.cxx  edgedetector.cxx  edgedetector.h  edgemain.cxx  houghtransform.cxx  houghtransform.h  htmanyradius.cxx  htwithradius.cxx  index.html  util.cxx  util.h
apps/research/MutualInformationCode/: CMakeLists.txt  MIregister.cxx  metric.h  optimizer.h  params.txt  registrator.h  transform.h  viewer.cxx
doc/: fig1.eps  fig1.shw  param.aux  param.dvi  param.tex  ref.bib  vispack.aux  vispack.bbl  vispack.blg  vispack.dvi  vispack.tex  vispack.toc
src/: CMakeLists.txt
src/err/: VISErr.cxx  VISErr.h
src/image/: CMakeLists.txt  classtypes.h  im.cxx  im.h  image.cxx  image.h  image.txx  imageRGBA.cxx  imageRGBA.h  image_type.cxx  image_type.h  imagefile.cxx  imagefile.h  imagefile.txx  indexlist.cxx  indexlist.h  rgba.cxx  rgba.h  vispacktiffio.c  vispacktiffio.cxx  vispacktiffioCC.h
src/image/scratch/: classtypes.h  im.h  image.h  image.txx  imageRGBA.h  image_type.h  imagefile.h  indexlist.h  rgba.h
src/mat/: CMakeLists.txt  Makefilenolapack  matrix.cxx  matrix.h  nrmatrix.h  nrutil.h  vector.cxx
src/oct/: octree.h
src/param/: lex.yy.cxx  param.h  param.l  param.y
src/scan/: navyscan.cxx  scan.h  scanimage.txx
src/util/: CMakeLists.txt  array.h  array.txx  defs.h  list.cxx  list.h  mathutil.cxx  mathutil.h
src/util/scratch/: geometry.h
src/vol/: CMakeLists.txt  march.cxx  march.h  meshtable.h  vol.cxx  vol.h  volindexlist.cxx  volindexlist.h  volume.cxx  volume.h  volume.txx  volumefile.cxx  volumefile.h
src/voxmodel/: activeindex.cxx  param.cxx
